Update web pages

--- a/Waterbottles-web/templates/bespoke.html
+++ b/Waterbottles-web/templates/bespoke.html
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <body>
-    <h1>Choose a file to analyze</h1>
+    <h1>Waterbottle Modal Analysis</h1>
+    <p>
+        Other links:<br>
+        <a href="https://github.com/jatinchowdhury18/modal-waterbottles">GitHub</a><br>
+        <a href="https://ccrma.stanford.edu/~jatin/Waterbottles">Audio Examples</a><br>
+        <a href="./database">Database</a><br>
+    </p>
+    <h2>Choose a file to analyze</h2>
     <form action="." method="POST" enctype="multipart/form-data">
         <input type="file" name="file"/>
         <input type="submit" value="Upload"/>
